# mini-gpt-like-lm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
minigpt/app/: fastapi_app.py  main.py  streamlit_app.py
minigpt/app/models/: request_model.py
minigpt/app/routers/: chat.py
minigpt/app/services/: service.py
minigpt/models/: __init__.py  feed_forward.py  gelu.py  layer_norm.py  minigpt.py  multi_head.py  settings.py  transformer.py
minigpt/scripts/: __init__.py  finetune_pipeline.py  pretrain_pipeline.py
minigpt/utils/: __init__.py  finetune_dataset.py  mini_dataset.py  pretrain_dataset.py  raw_text_loader.py  utils.py
tests/: test_finetune_dataset.py  test_pretrain_dataset.py  test_raw_text_loader.py  test_utils.py
